--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,42 @@
-body{
-    box-sizing: border-box;
-    background: #d33a2c;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html, body{
+  color:#000;
+  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+a{
+  text-decoration: none;
+  color: black
+}
+ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-header{
-    background-color: #d33a2c;
-    width: 100%;
-    padding: 0;
-    margin: 0;
+[class*='col-'] {
+  float: left;
+}
+.col-2-3{
+  width: 76%;
+}
+.col-1-3{
+  width: 12%;
+  background: rgb(211, 211, 211);
+  min-height: 108px;
+  padding: 2em 0;
+}
+.last{
+  padding: 2em 3.5em;
 }
 
 .logo{
     padding-left: 1em;
     margin: 0;
-    height: 1px;
+    height: 1px;    
 }
 
 .logo img{
@@ -21,31 +44,13 @@ header{
     padding-top: 2em;
     margin: 0;
 }
-
-.main-nav{
-    padding-left: 5em;
-    overflow: hidden;
-    display: flex;
-    list-style-type: none;
-    text-align: center;
-    color: white;
-    width: 100%;
-    margin: 0;
+nav ul{
+  background: darkgray;
+  text-align: center;
+  padding: 2em 0;
 }
 
-.main-nav img{
-    width: 40%;
-    padding-top: 1em;
-    padding-bottom: .5em;
-    margin: 0;
-}
-
-.main-nav li{
-    padding-left: 3em;
-    margin: 0;
-}
-
-.main-nav li h2{
-    padding: 0;
-    margin: 0;
+nav ul li{
+  display: inline-block;
+  padding: 0 1.5em;
 }
