--- a/styles.css
+++ b/styles.css
@@ -47,10 +47,36 @@ ul{
 nav ul{
   background: darkgray;
   text-align: center;
-  padding: 2em 0;
+  padding: 1em 0;
 }
 
 nav ul li{
   display: inline-block;
   padding: 0 1.5em;
 }
+
+.first{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+}
+
+.box h1{    
+    text-align: center;
+    margin-top: 10%;    
+    width: auto;
+    height: auto;
+}
+
+.box:nth-child(1), .box:nth-child(4){
+    float:left;
+    background: dimgray;
+}
+
+.box:nth-child(2), .box:nth-child(3){
+    float: right;
+    background: lightgray;
+}
+
+
+
