--- a/styles.css
+++ b/styles.css
@@ -17,22 +17,6 @@ ul{
   padding: 0;
 }
 
-[class*='col-'] {
-  float: left;
-}
-.col-2-3{
-  width: 76%;
-}
-.col-1-3{
-  width: 12%;
-  background: rgb(211, 211, 211);
-  min-height: 108px;
-  padding: 2em 0;
-}
-.last{
-  padding: 2em 3.5em;
-}
-
 .logo{
     padding-left: 1em;
     margin: 0;
@@ -54,18 +38,23 @@ nav ul li{
   display: inline-block;
   padding: 0 1.5em;
 }
-
-.first{
+.grid{
+  display: grid;
+  grid-template-columns: 1fr 6fr 1fr;
+}
+.col-1-3{
+  background: rgb(191, 191, 191);
+}
+.banner{
     display: grid;
     grid-template-columns: 1fr 1fr;
     width: 100%;
 }
 
 .box h1{    
-    text-align: center;
-    margin-top: 10%;    
-    width: auto;
-    height: auto;
+  text-align: center;
+  padding: 7em;
+  line-height: 1.5
 }
 
 .box:nth-child(1), .box:nth-child(4){
