--- a/styles.css
+++ b/styles.css
@@ -40,12 +40,18 @@ nav ul li{
 }
 .grid{
   display: grid;
-  grid-template-columns: 1fr 6fr 1fr;
+  grid-template-columns: 1fr 9fr 1fr;
 }
 .col-1-3{
   background: rgb(191, 191, 191);
 }
-.banner{
+
+.topics{
+    line-height: 4em;
+    padding-left: 2.5em;
+}
+
+.box-container{
     display: grid;
     grid-template-columns: 1fr 1fr;
     width: 100%;
@@ -68,5 +74,11 @@ nav ul li{
     padding: 0;
 }
 
-
- 
+.info-box{ 
+    position: absolute;
+    top: 130px;
+    left: 495px;
+    background: white;
+    text-align: center;
+    padding: .8em;
+}
