--- a/styles.css
+++ b/styles.css
@@ -108,3 +108,72 @@ nav ul li{
     font-size: 18px;
     font-family: sans-serif;
 }
+
+.two-box-articles{
+  display: grid;
+  grid-template-columns: 30% auto;
+  grid-template-rows: 200px;
+  grid-row-gap: 1px;
+  grid-column-gap: 20px;
+  padding: 2em 3em;
+  text-align: center;
+  height: 435px;
+}
+.articles-box-small{
+  background: lightgrey;
+  border-radius: 15px;  
+  padding: 2em;
+}
+.articles-box-small h1{
+  padding-bottom: 1em;
+}
+
+.articles-box-big{
+  background: darkgray;
+  height: 400px;
+  border-radius: 15px;
+  padding: 8em 5em;
+}
+
+.articles-box-big h1{
+   padding-bottom: 1em;
+   font-size: 3em;   
+}
+
+.articles-box-big p{ 
+  font-size: 1.5em;
+  line-height: 1.5; 
+}
+
+.nobg{
+  background: transparent;
+  text-align: left;  
+}
+
+.nobg h2{
+  font-size: 1.7em;
+  text-decoration: underline;
+  line-height: 1.2;
+    padding: 1em 0;
+}
+.nobg small{
+  font-weight: 500;
+  padding: 2em 0;
+  font-size: 1.1em;
+}
+.nobg p{
+  font-weight: 500;
+  padding: 2em 0;
+}
+.link{
+  text-align: center;
+  width: 100%;
+  padding: 2em;
+  font-size: 1em;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+}
+
+.link a{
+    border-bottom: 4px solid red;
+}
