--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,7 @@ nav ul li{
   padding: 2em 3em;
   text-align: center;
   height: 435px;
+  margin-bottom: 75px;
 }
 .articles-box-small{
   background: lightgrey;
@@ -130,7 +131,7 @@ nav ul li{
 
 .articles-box-big{
   background: darkgray;
-  height: 400px;
+  height: 500px;
   border-radius: 15px;
   padding: 8em 5em;
 }
@@ -175,5 +176,65 @@ nav ul li{
 }
 
 .link a{
-    border-bottom: 4px solid red;
+    border-bottom: 4px solid darkgray;
+}
+
+.smashconf{
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background: lightgray;
+}
+
+.smash-container{
+  height: 600px;
+
+}
+
+
+.smash-container h2{
+  font-size: 3em;
+  padding: 1em 0;
+}
+
+
+.smash-container p{
+  width: 50%;
+  margin: 0 auto;
+  font-size: 1.5em;    
+  line-height: 1.5
+}
+
+.top-text{
+  font-size: 1em;
+  padding-top: 4em;
+  display: block;
+}
+
+.explore-btn{
+  background: darkgray;
+  color: white;
+  padding: 1em 2em;
+  border-radius: 15px;
+  font-size: 1.5em;
+  margin-top: 2em;
+}
+
+.person-week{
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  padding: 4em 5em;
+}
+
+
+.person-picture{
+  background: darkgray;
+  height: 150px;
+  width: 215px;
+  border-radius: 15px;
+  padding: 2em 3em
+}
+
+.person-content h4{
+  padding-bottom: 1em;
 }
