--- a/styles.css
+++ b/styles.css
@@ -242,3 +242,75 @@ nav ul li{
 .person-content p{
   line-height: 1.5
 }
+
+.person-2-col{
+  display: grid;
+  grid-template-columns: 1fr 1fr; 
+  height: 300px;
+  padding: 2em 5em;  
+  grid-gap: 30px;
+}
+.person-left{
+  display: grid;
+  grid-template-columns: 1fr 3fr;   
+  grid-gap: 20px;  
+}
+
+.person-right{
+  display: grid;
+  grid-template-columns: 1fr 3fr;   
+  grid-gap: 20px;
+}
+
+.person-img{
+  background: lightgrey;
+  height: 100px;
+  border-radius: 15px;
+}
+
+.person-text h2{
+  padding: 0.5em 0;
+  font-size: 2em;
+}
+
+.person-text p{
+  line-height: 1.5;
+}
+.small-heading{
+  text-decoration: underline; 
+  font-weight: 500;
+  letter-spacing: 0.1em;
+  font-size: 1.2em;
+}
+
+.two-col{
+  display: grid;
+  grid-template-columns: 6fr 2fr;
+  padding: 1em 5em;
+  line-height: 1.5
+}
+.two-col-heading{
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-weight: 500;
+}
+.two-col-content h2{
+  font-size: 3em;
+  text-decoration: underline;
+  padding: 0 0 0.5em 0;
+}
+
+.two-col-content p{
+  font-size: 1.5em;
+  padding-right: 2em;
+}
+.two-col-img{
+  height: 300px;
+  background: darkgray;
+  border-radius: 15px;
+  width: 300px;
+}
+
+.two-col-content{
+  height: 400px;
+}
